--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     background: linear-gradient(164deg, rgba(23,58,107,1) 0%, rgba(137,113,227,1) 40%, rgba(130,64,157,1) 100%);
     background-repeat: no-repeat;
     height: 100vh;
+    overflow: hidden;
 }
 
 h1{
@@ -13,7 +14,7 @@ h1{
 }
 
 .app{
-    margin-top: 150px;
+  
     text-align: center;
 }
 
